--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,5 +1,8 @@
 .nav {
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100vw;
     top: 0;
     z-index: 1;
@@ -12,6 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 74px;
+    width: 100%;
 }
 
 .nav a {
@@ -39,7 +44,6 @@
 .dark {
     background-color: rgb(0 0 0 / 95%);
     box-shadow: 0 0 40px 10px rgba(0,0,0,.1), 0 0 15px -7px rgba(0,0,0,.3);
-    transition: all 0.4s ease-in-out; 
 }
 
 /* .hidden {
@@ -49,6 +53,7 @@
 @media (max-width: 768px) {
     .nav {
         padding: 0;
+        min-height: auto;
     }
 
     .nav ul {
