--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -17,6 +17,7 @@
     justify-content: center;
     min-height: 74px;
     width: 100%;
+    transition: all 0.4s ease-in-out; 
 }
 
 .nav a {
@@ -41,14 +42,17 @@
     cursor: pointer;
 }
 
-.dark {
-    background-color: rgb(0 0 0 / 95%);
-    box-shadow: 0 0 40px 10px rgba(0,0,0,.1), 0 0 15px -7px rgba(0,0,0,.3);
-}
 
-/* .hidden {
-    transform: translateY(-100%);
-} */
+@media (min-width: 769px) {
+    .dark {
+        background-color: rgb(0 0 0 / 95%);
+        box-shadow: 0 0 40px 10px rgba(0,0,0,.1), 0 0 15px -7px rgba(0,0,0,.3);
+    }
+    
+    .hidden {
+        transform: translateY(-100%);
+    }
+}
 
 @media (max-width: 768px) {
     .nav {
