--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap');
 
 * {
     margin: 0;
@@ -111,7 +112,7 @@ html {
     z-index: 1;
     transition: all 0.4s ease-in-out; 
 }
-    
+
 #nav-button {
     display: none;
 }
@@ -200,27 +201,33 @@ section:not(#hero) h1, section:not(#hero) h2 {
     font-size: 2.375em;
 }
 
-section .quote {
-    position: relative;
-    display: block;
+section.quote {
+    background-color: #001c3be6 !important;
 }
 
-section .quote h3 {
-    font-size: 1.5rem;
-    font-family: 'EB Garamond', serif;
+.quote-container {
+    position: relative;
+    display: block;
+    color: white;
+    font-family: "Edu AU VIC WA NT Guides", cursive;
+}
+
+.quote-container h3 {
+    font-size: 2rem;
     margin: 0;
     padding: 0;
     font-weight: normal;
     margin-bottom: 1rem;
-    font-style: italic;
 }
 
-section .quote small {
+.quote-container small {
     display: block;    
     text-align: right;
+    font-family: 'Barlow', sans-serif;
+    color: white;
 }
 
-section .quote .quote-marks {
+.quote-container .quote-marks {
     opacity: 0.25;
     margin-right: 1rem;
 }
@@ -243,15 +250,11 @@ section#hero {
     background-color: transparent;
     color: white;
     background: linear-gradient(to bottom, #090a16, #090a16bd);
-}
-
-section.purple {
-    background-color: #001c3be6;
-    color: white;
+    font-size: 1.25rem;
+    position: relative;
 }
 
 section#hero h1 {
-    font-size: 2rem;
     text-transform: uppercase;
     letter-spacing: 3px;
     font-weight: 600 !important;
@@ -259,14 +262,12 @@ section#hero h1 {
 }
 
 section#hero h3 {
-    font-size: 1.75rem;
     font-weight: 400 !important;
     letter-spacing: 2px;
     /* text-shadow: 2px 2px 15px #7fffff; */
 }
 
 section#hero small {
-    font-size: 0.875rem;
     letter-spacing: 2px;
 }
 
@@ -582,6 +583,7 @@ span:nth-child(1) {
         height: 50vh;
         min-height: 50vh;
         padding: 3rem 3rem;
+        font-size: 1rem;
     }
 
     /* section#hero h1 {
@@ -614,7 +616,7 @@ span:nth-child(1) {
         display: none;
     }
 
-    section.hero .quote .quote-marks {
+    .quote-wrapper .quote-marks {
         font-size: 80px; 
         line-height: 0; 
         vertical-align: text-bottom;
@@ -623,13 +625,13 @@ span:nth-child(1) {
         opacity: 0.5;
     }
 
-    section.hero .quote h3 {
+    .quote-wrapper h3 {
         line-height: 1.2;
         font-size: 22px;
         margin-bottom: 1rem;
     }
 
-    section.hero .quote small {
+    .quote-wrapper small {
         font-size: 11px;
     }
 
