--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -583,7 +583,7 @@ span:nth-child(1) {
         height: 50vh;
         min-height: 50vh;
         padding: 3rem 3rem;
-        font-size: 1rem;
+        font-size: 0.875em;
     }
 
     /* section#hero h1 {
