--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -586,23 +586,15 @@ span:nth-child(1) {
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 50vh;
+        height: 100vh;
         min-height: 50vh;
         padding: 3rem 3rem;
         font-size: 0.875em;
     }
 
-    /* section#hero h1 {
-        font-size: 1.5rem;
+    section.quote {
+        min-height: 100vh;
     }
-    
-    section#hero h3 {
-        font-size: 1.125rem;
-    }
-    
-    section#hero small {
-        font-size: 0.875rem;
-    } */
 
     section.about {
         background-color: #092d4a;
