--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -358,7 +358,14 @@ section#reviews {
     padding: 2.5rem;
     border-radius: 0.5rem;
     background-color: white;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.1), 0 2px 6px rgba(0, 0, 0, 0.03);
+    transform: translateY(0) !important;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
+    transition: all 1s cubic-bezier(0.2, 0, 0.2, 1);
+}
+
+.card:hover {
+    transform: translateY(-5px) !important;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
 }
 
 .card p {
