--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap');
 
 * {
     margin: 0;
@@ -199,9 +200,10 @@ section p {
     max-width: 775px;
 }
 
-section:not(#hero) h1, section:not(#hero) h2 {
-    font-family: 'EB Garamond', serif;
+section:not(#hero) h1, section:not(#hero) h2, footer h2 {
+    font-family: 'Playfair Display', serif;
     font-size: 2.375em;
+    font-weight: 400;
 }
 
 section.quote {
@@ -239,12 +241,9 @@ section.quote {
 
 hr {
     width: 80px;
-    height: 3px;
-    background-color: #0c5f87;
+    height: 2px;
+    background-color: rgba(12, 95, 135, 0.4);
     border: 0;
-    margin: 0 auto;
-    margin-bottom: 3rem;
-    text-align: center;
 }
 
 section#hero {
@@ -295,7 +294,7 @@ section.about .button:active {
 }
 
 section.about hr {
-    background-color: #bce1ff;
+    background-color: rgba(188, 225, 255, 0.4);
 }
 
 section.about a {
@@ -317,7 +316,7 @@ section.technologies {
 }
 
 section.technologies hr {
-    background-color: #6fffef;
+    background-color: rgba(111, 255, 239, 0.4);
 }
 
 section.technologies .technologies-container {
@@ -518,9 +517,9 @@ footer a:hover i {
 }
 
 footer hr {
-    background-color: #ffffffcc;
+    background-color: rgba(255, 255, 255, 0.4);
     border: 0;
-    height: 3px;
+    height: 1px;
     width: 80px;
     margin: 0 auto;
     margin-bottom: 3rem;
